Multiple changes done

--- a/views/credentials/index.ejs
+++ b/views/credentials/index.ejs
@@ -1,6 +1,9 @@
+
+<%- include('header') %>    
+<a href="/credentials/add">Add Record</a>
 <% if(data.length) { %>
 
-    <table>
+    <table class="table table-bordered">
         <thead>
             <th>Website</th>
             <th>Service</th>
@@ -14,10 +17,13 @@
                     <td><%= data[i].service %></td>
                     <td><%= data[i].username %></td>
                     <td>
-                        <a href="">Show</a>
+                        <a class="btn btn-primary btn-small" href="/credentials/show/<%= data[i].id %>">Show</a>
+                        <a class="btn btn-primary btn-small" href="/credentials/update/<%= data[i].id %>">Edit</a>
                     </td>
                 </tr>
             <% } %>
         </tbody>
     </table>
 <% } %>
+
+<%- include('footer') %>    
