--- a/views/credentials/update.ejs
+++ b/views/credentials/update.ejs
@@ -1,5 +1,5 @@
 <%- include('header') %>    
-<form action="/credentials/add" method="post">
+<form action="/credentials/update/<%= id %>" method="post">
     <div class="row">
         <div class="col-6">
             <div class="form-group">
